--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- This is where your exercise will go  -->
   </main>
 
+  <footer class="footer" role="contentinfo">
+    <small class="copyright">&copy; 2016 ACME Industries Corp.</small>
+  </footer>
+
 </body>
 
 </html>
